# authentication_system_using_ocaml

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  auth_system.opam  docker-compose.yml  dune  dune-project  schema.sql
client/: dune  main.ml
pages/: dune  login_page.ml  not_found_page.ml  pages.ml  register_page.ml
pages/snippets/: snippets.ml
server/: dune  server.ml
server/pages/: dashboard_page.ml  dune  forgot_password_page.ml  login_page.ml  pages.ml  register_page.ml  reset_password_page.ml
server/pages/snippets/: dune  snippets.ml
server/utils/: dune  helpers.ml  lockout.ml  rate_limiter.ml  user.ml  utils.ml  verification.ml
